--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
 	<header>
 	
-		<a href="index2.html"><h1>Tristara International Study</h1></a>
+		<a href="index.html"><h1>Tristara International Study</h1></a>
 		
 		
 		<p id="topNav">
